# PARAD-SemesterProject

./: CMakeLists.txt  Game.cpp  Game.h  GameConfigurations.h  Waterfall Unicorn od so.txt  angabe.txt  git-anleitung.txt  main.cpp
classes/clown/: Clown.cpp  Clown.hpp
classes/clown/children/: Clown1.cpp  Clown1.h  Clown2.h  Clown3.h
classes/consumable/: IConsumable.cpp  IConsumable.hpp
classes/consumable/children/: CottonCandy.cpp  CottonCandy.hpp  HealthPotion.cpp  HealthPotion.hpp
models/clown/: Clown.h  Clown1.h  Clown2.cpp  Clown2.h  Clown3.cpp  Clown3.h
models/potion/: Potion.cpp  Potion.h
models/power/: Power.cpp  Power.h
ui/: GameUi.cpp  GameUi.h
